test/lambda/negative/semantic/start_outside_pn.ls
pn child() { 1 }

fn invalid() {
    start child()
}
